--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "https://github.com/zyxzyx123/FIT3179/blob/main/visualization.vl%20(1).json";
+  var spec = "https://vega.github.io/schema/vega-lite/v4.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
