--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "http://zyxzyx123.github.io/FIT3179/visualization.vg.json";
+  var spec = "visualization.vg.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
