--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 </head>
 <body>
 
-<div id="vis"></div>
+<h2>This is the first visualisation</h2>
+<div id="vis1"></div>
+
+<h2>This is the second visualisation</h2>
+<div id="vis2"></div>
 
 <script type="text/javascript">
-  var spec = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/stacked_bar_chart.vl.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+  var spec1 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/stacked_bar_chart.vl.json";
+  var spec2 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/choropleth.vl.json";
+
+  vegaEmbed('#vis1', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  vegaEmbed('#vis2', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
