--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
+<h1>Multiple Visualisations Update</h1>
 
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
