--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript">
   var spec1 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/stacked_bar_chart.vl.json";
   var spec2 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/choropleth.vl.json";
-  var spec3 = "hhttps://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/line_chart.json";
+  var spec3 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/line_chart.vl.json";
 
   vegaEmbed('#vis1', spec1).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
