--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <h1>Multiple Visualisations Update</h1>
 
-<h2>This is the first visualisation</h2>
+<h2>World happiness report (2020)</h2>
 <div id="vis1"></div>
 
-<h2>This is the second visualisation</h2>
+<h2>Happiness score of different countries</h2>
 <div id="vis2"></div>
   
-<h2>This is the Third visualisation</h2>
+<h2>Happiness score trend over time</h2>
 <div id="vis3"></div>
 
 <script type="text/javascript">
