--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
   
 <h2>Happiness score trend over time</h2>
 <div id="vis3"></div>
+  
+<h2>Happiness score trend over time</h2>
+<div id="vis4"></div>
 
 <script type="text/javascript">
-  var spec1 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/stacked_bar_chart.vl.json";
-  var spec2 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/Final_choropleth.vl.json";
-  var spec3 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/line_chart.vl.json";
+  var spec1 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/Piechart.vl.json";
+  var spec2 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/stacked_bar_chart.vl.json";
+  var spec3 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/Final_choropleth.vl.json";
+  var spec4 = "https://raw.githubusercontent.com/zyxzyx123/FIT3179/main/js/line_chart.vl.json";
 
   vegaEmbed('#vis1', spec1).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -35,6 +39,12 @@
   vegaEmbed('#vis3', spec3).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
+  
+  vegaEmbed('#vis4', spec4).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  
 </script>
 </body>
 </html>
