--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     }
     h1{
       font-weight: 900;
+      font-size: 42px;
     }
+    h2{ font-weight: 450;
+			font-size: 30px;
      body{
        background-color: lightgray;
      }
@@ -29,9 +32,12 @@
        margin: auto;
        padding: 50px;
        padding-top: 35px;
+       font_size: 16px;
     }
     .vis-container{
       width: 100%;
+      height: 500px;
+      padding-top: 20px;
     }
     .description h2, h1{
       margin-top:0px;
