--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-size: 42px;
     }
     h2{ font-weight: 450;
-			font-size: 30px;
+	font-size: 30px;
      body{
        background-color: lightgray;
      }
@@ -34,25 +34,48 @@
        padding-top: 35px;
        font_size: 16px;
     }
-    .vis-container{
-      width: 100%;
-      height: 600px;
-      padding-top: 20px;
+    .vis-containerTall{
+	    width: 100%;
+	    height: 500px;
+	    padding-top: 20px;
     }
+    .vis-containerTallLeft{
+	    width: 100%;
+	    height: 500px;
+	    padding-top: 20px;
+            padding-right: 20px;
+			
+		}    
+    .vis-LeftContainer{
+      width: 100%;
+      height: 400px;
+      padding-top: 20px;
+      padding-right: 20px;
+    }
+    .vis-RightContainer{
+      width: 100%;
+      height: 400px;
+      padding-top: 20px;
+      padding-left: 20px;
+    }    
     .description h2, h1{
       margin-top:0px;
     }
     .description-right {
       padding-left: 20px;
+      padding-top: 20px;
     }
     .description-left{
       padding-right: 20px;
+      padding-top: 20px;
     }
     .pure-g{
       margin-bottom: 25px;
     }
     .small-font{
         font-size: 14px;
+	text-align: right;
+	padding-top: 15px;
     }
   </style>
   
@@ -80,7 +103,7 @@
           </div>
         </div>
         <div class="pure-u-1-2">
-          <div id="vis1" class="vis-container"></div>
+          <div id="vis1" class="vis-RightContainer"></div>
         </div>
     </div>
     <!-- end pure grid group -->
@@ -88,7 +111,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
         <div class="pure-u-1-2">
-          <div id="vis2"  class="vis-container"></div>
+          <div id="vis2"  class="vis-LeftContainer"></div>
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right">
@@ -109,7 +132,7 @@
         </div>
       </div>
       <div class="pure-u-1-2">
-        <div id="vis4"  class="vis-container"></div>
+        <div id="vis4"  class="vis-LeftContainer"></div>
       </div>
       
     </div>
