--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Multiple Visualisations</h1>
-        <p>This page demonstrates how you can use pure.css grid for your layout.</p>
+        <p>This page111 demonstrates how you can use pure.css grid for your layout.</p>
       </div>
     </div>
   <!-- end pure grid group -->
