--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Multiple Visualisations</h1>
-        <p>This page222 demonstrates how you can use pure.css grid for your layout.</p>
+        <p>This page333 demonstrates how you can use pure.css grid for your layout.</p>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -109,7 +109,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
         <div class="pure-u-1-2">
-          <div id="vis2"  class="vis-LeftContainer"></div>
+          <div id="vis2"  class="vis-containerTallLeft"></div>
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right">
