--- a/index.html
+++ b/index.html
@@ -14,66 +14,71 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
   <!-- custom style -->
   <style>
-    *{
-      font-family: 'Source Sans Pro', sans-serif;
-    }
-    h1{
-      font-weight: 900;
-      font-size: 42px;
-    }
-    h2{ font-weight: 450;
-	font-size: 30px;
-     body{
-       background-color: lightgray;
-     }
-     .page{
-       width: 1000px;    
-       background-color: white;   
-       margin: auto;
-       padding: 50px;
-       padding-top: 35px;
-       font_size: 16px;
-    }
-    .vis-containerTall{
+	  *{
+		  font-family: 'Source Sans Pro', sans-serif;
+	  }
+	  h1{
+		  font-weight: 900;
+		  font-size: 42px;
+	  }
+	  h2{ font-weight: 450;
+		  font-size: 30px;
+	  }
+	  body{
+		  background-color: lightgray;
+	  }
+	  .page{
+		  width: 1000px;    
+		  background-color: white;   
+       		  margin: auto;
+       	          padding: 50px;
+       		  padding-top: 35px;
+                  font_size: 16px;
+	  }
+	  .vis-containerTall{
 	    width: 100%;
 	    height: 500px;
 	    padding-top: 20px;
-    }
-    .vis-containerTallLeft{
-	    width: 100%;
-	    height: 500px;
-	    padding-top: 20px;
-            padding-right: 20px;
-			
-		}    
-    .vis-LeftContainer{
-      width: 100%;
-      height: 400px;
-      padding-top: 20px;
-      padding-right: 20px;
-    }
-    .vis-RightContainer{
-      width: 100%;
-      height: 400px;
-      padding-top: 20px;
-      padding-left: 20px;
-    }    
-    .description h2, h1{
-      margin-top:0px;
-    }
-    .description-right {
-      padding-left: 20px;
-      padding-top: 20px;
-    }
-    .description-left{
-      padding-right: 20px;
-      padding-top: 20px;
-    }
-    
-    .small-font{
-        font-size: 14px;
-	text-align: right;
-	padding-top: 15px;
+	  }
+	  .vis-containerTallLeft{
+		  width: 100%;
+	          height: 500px;
+	    	  padding-top: 20px;
+            	  padding-right: 20px;
+	  } 
+	  .vis-containerTallRight{
+		  width: 100%;
+		  height: 500px;
+		  padding-top: 20px;
+                  padding-left: 20px;
+	  }
+	  .vis-LeftContainer{
+		  width: 100%;
+      		  height: 400px;
+      		  padding-top: 20px;
+      		  padding-right: 20px;
+	  }
+	  .vis-RightContainer{
+		  width: 100%;
+      		  height: 400px;
+      		  padding-top: 20px;
+      		  padding-left: 20px;
+	  } 
+	  .description h2, h1{
+		  margin-top:0px;
+	  }
+	  .description-right {
+		  padding-left: 20px;
+		  padding-top: 20px;
+	  }
+	  .description-left{
+		  padding-right: 20px;
+		  padding-top: 20px;
+	  }
+	  .small-font{
+		  font-size: 14px;
+		  text-align: right;
+		  padding-top: 15px;
     }
   </style>
   
@@ -88,7 +93,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Multiple Visualisations</h1>
-        <p>This page333 demonstrates how you can use pure.css grid for your layout.</p>
+        <p>This page444 demonstrates how you can use pure.css grid for your layout.</p>
       </div>
     </div>
   <!-- end pure grid group -->
