--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  }
 	  .page{
 		  width: 1000px;    
-		  background-color: white;   
+		  background-color: "#f0f7fa";   
        		  margin: auto;
        	          padding: 50px;
        		  padding-top: 35px;
