--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 	  h1{
 		  font-weight: 900;
 		  font-size: 42px;
+		  background-color: #fec44f;
 	  }
 	  h2{ font-weight: 450;
 		  font-size: 30px;
 	  }
 	  body{
-		  background-color: lightgray;
+		  background-color: #fdbb84;
 	  }
 	  .page{
 		  width: 1000px;    
-		  background-color: #f0f7fa;   
+		  background-color: #fee8c8;   
        		  margin: auto;
        	          padding: 50px;
        		  padding-top: 35px;
