--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  }
 	  .page{
 		  width: 1000px;    
-		  background-color: #fee8c8;   
+		  background-color: #fff7bc;   
        		  margin: auto;
        	          padding: 50px;
        		  padding-top: 35px;
