--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
        		  padding-top: 35px;
                   font_size: 16px;
 	  }
+	  
+	  .vis-containerShort{
+	    width: 100%;
+	    height: 250px;
+	    padding-top: 20px;
+	  }
+	  
+	  .vis-containerShortLeft{
+	    width: 100%;
+	    height: 250px;
+	    padding-top: 20px;
+            padding-right: 20px;
+	  }
+	  
+	  .vis-containerShortRight{
+	    width: 100%;
+	    height: 250px;
+	    padding-top: 20px;
+            padding-left: 20px;
+	  }
+	  
 	  .vis-containerTall{
 	    width: 100%;
 	    height: 500px;
@@ -108,7 +129,7 @@
           </div>
         </div>
         <div class="pure-u-1-3">
-          <div id="vis1" class="vis-RightContainer"></div>
+          <div id="vis1" class="vis-containerShortRight"></div>
         </div>
     </div>
     <!-- end pure grid group -->
