--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
   <!-- end pure grid group -->
      <!-- pure grid group -->
     <div class="pure-g">
-        <div class="pure-u-2-3">
+        <div class="pure-u-1-2">
           <div class="description description-left">
             <h2>This is the first section</h2>
             <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
           </div>
         </div>
-        <div class="pure-u-1-3">
+        <div class="pure-u-1-2">
           <div id="vis1" class="vis-containerShortRight"></div>
         </div>
     </div>
@@ -136,10 +136,10 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-        <div class="pure-u-1-3">
+        <div class="pure-u-2-3">
           <div id="vis2"  class="vis-containerTallLeft"></div>
         </div>
-        <div class="pure-u-2-3">
+        <div class="pure-u-1-3">
           <div class="description description-right">
             <h2>This is the second section</h2>
             <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
@@ -158,11 +158,27 @@
         </div>
       </div>
       <div class="pure-u-1-2">
+        <div id="vis3"  class="vis-LeftContainer"></div>
+      </div>
+      
+    </div>
+    <!-- end pure grid group -->
+	  
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-2">
+        <div class="description description-left">
+          <h2>This is the third section</h2>
+          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+        </div>
+      </div>
+      <div class="pure-u-1-2">
         <div id="vis4"  class="vis-LeftContainer"></div>
       </div>
       
     </div>
     <!-- end pure grid group -->
+	  
   
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
