--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 	  .vis-containerTallLeft{
 		  width: 100%;
 	          height: 500px;
-	    	  padding-top: 10px;
-            	  padding-right: 10px;
+	    	  padding-top: 0px;
+            	  padding-right: 0px;
+		  padding-left: 0px;
+            	  
 	  } 
 	  .vis-containerTallRight{
 		  width: 100%;
