--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 	    <div class = "pure-u-2-24"></div>
 	    <div class = "pure-u-20-24">
 		    <div id = "vis2" class = "vis-containerTallLeft">
+			    <h2>This is the Second section</h2>
+                            <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+			    
                     </div>
 </div>
             <div class = "pure-u-2-24"></div>          
