--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
         </div>
     </div>
     <!-- end pure grid group -->
+	  
+    <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2>Multiple Visualisations</h1>
+        <p>This page555 demonstrates how you can use pure.css grid for your layout.</p>
+      </div>
+    </div>
 
     <!-- pure grid group -->
     <div class="pure-g">
