--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 	  
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h2>Multiple Visualisations</h1>
-        <p>This page555 demonstrates how you can use pure.css grid for your layout.</p>
+	      <div class="description description-left">
+	      <h2>Multiple Visualisations</h1>
+              <p>This page555 demonstrates how you can use pure.css grid for your layout.</p>
       </div>
     </div>
 
