--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
    <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Multiple Visualisations</h1>
-        <p>This page555 demonstrates how you can use pure.css grid for your layout.</p>
+        <h1>World Happiness Report Analyse</h1>
+        <p>The World Happiness Report is a landmark survey of the state of global happiness that ranks 156 countries by how happy their citizens perceive themselves to be, the main goal of this visualisation is to help user have a clearer understanding about different aspects in calculating happiness score, and identified the trend of happiness score over time. In addition, the Choropleth and Stacked bar chart can help user conveniently discover the outliers data from the visualisation.</p>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -126,8 +126,8 @@
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <h2>This is the first section</h2>
-            <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+            <h2>The composition of happiness score(index)</h2>
+            <p>Happiness score, also know as happiness index, represent how happy a country's citizens perceive themselves to be. When comes to calculating or evaluating happiness scores for countries, it can be furtherly split into 7 types, which are "Dystopia Residual (unexplained happiness)", "Social Support", "GDP Per Capita", "Health", "Freedom", "Generosity", "Government Trust". All these 7 aspects affect the results of happiness score evaluation, to calculate the happiness scores in countries, we only need to sum up all these 7 aspects scores. However, the percentage they take acount in calculation are also different. Below is a pie chart with label helps you understand the proportions they have when comes to evaluation. </p>
           </div>
         </div>
         <div class="pure-u-1-2">
@@ -139,8 +139,8 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
 	      
-	      <h2>Multiple Visualisations</h1>
-              <p>This page555 demonstrates how you can use pure.css grid for your layout.</p>
+	      <h2>2020 World Happiness Report Analyse</h1>
+              <p>Below is a choropleth that helps user understand the distribution of happiness scores along with its subdivided aspects, to interact with the graph, you can select the menu at the bottom and choose the aspect that you interested in. The chart indicates that </p>
       </div>
     </div>
 
