--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://github.com/KadekSatriadi" target="_blank">Kadek Satriadi</a>. The datasource is <a href="#"" target="_blank">some data repository online</href>.</p>
+        <p>This visualisation is created by <a href="https://github.com/zyxzyx123" target="_blank">zyxzyx123</a>. The datasource is <a href="https://www.kaggle.com/yamaerenay/world-happiness-report-preprocessed?select=2020_report.csv" target="_blank">some data repository online</href>.</p>
       </div>
     </div>
    
